export const APERTURES = [
  'f/1.2',
  'f/1.4',
  'f/2',
  'f/2.8',
  'f/4',
  'f/5.6',
  'f/8',
  'f/11',
  'f/16',
  'f/22',
];

export const SHUTTERS = [
  '1/4000',
  '1/2000',
  '1/1000',
  '1/500',
  '1/250',
  '1/125',
  '1/60',
  '1/30',
  '1/15',
  '1/8',
  '1/4',
  '1/2',
  '1s',
  '2s',
  '4s',
  '8s',
  '15s',
  '30s',
  'B',
];

export const COMMON_ISOS = ['100', '200', '400', '800', '1600', '3200'];

export const ROLL_LENGTHS = [24, 36, 10, 12, 15, 16];
